--- a/src/views/book/book-page.html
+++ b/src/views/book/book-page.html
@@ -8,13 +8,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="description" content="library Sh++">
 
-    <link rel="stylesheet" href="./book-page_files/libs.min.css">
-    <link rel="stylesheet" href="./book-page_files/style.css">
+    <link rel="stylesheet" href="./book-page_files/libs.min.css"> //todo change link
+    <link rel="stylesheet" href="./book-page_files/style.css"> //todo change link
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.css" crossorigin="anonymous"/>
 
-    <link rel="shortcut icon" href="http://localhost:3000/book/favicon.ico">
+    <link rel="shortcut icon" href="http://localhost:3005/book/favicon.ico"> //todo change link + download
 </head>
 
 <body data-gr-c-s-loaded="true" class="">
@@ -22,7 +22,7 @@
         <nav class="navbar navbar-default">
             <div class="container">
                 <div class="col-xs-5 col-sm-2 col-md-2 col-lg-2">
-                    <div class="logo"><a href="http://localhost:3000/" class="navbar-brand"><span class="sh">Ш</span><span class="plus">++</span></a></div>
+                    <div class="logo"><a href="http://localhost:3005/" class="navbar-brand"><span class="sh">Ш</span><span class="plus">++</span></a></div>
                 </div>
                 <div class="col-xs-12 col-sm-7 col-md-8 col-lg-8">
                     <div class="main-menu">
@@ -70,10 +70,8 @@
                     </div>
                 </script>
                 <div id="id" book-id="22">
-                    <div id="bookImg" class="col-xs-12 col-sm-3 col-md-3 item" style="
-    margin:;
-"><img src="./book-page_files/22.jpg" alt="Responsive image" class="img-responsive">
-                        
+                    <div id="bookImg" class="col-xs-12 col-sm-3 col-md-3 item" style="margin: auto;">
+                        <img src="./book-page_files/22.jpg" alt="Responsive image" class="img-responsive">
                         <hr>
                     </div>
                     <div class="col-xs-12 col-sm-9 col-md-9 col-lg-9 info">
