--- a/src/views/book/partials/head.ejs
+++ b/src/views/book/partials/head.ejs
@@ -4,8 +4,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="description" content="library Sh++">
 
-    <link rel="stylesheet" href="./style.css" type="text/css">
-    <link rel="stylesheet" href="./libs.min.css" type="text/css">
+    <link rel="stylesheet" href="/style/book/style.css" type="text/css">
+    <link rel="stylesheet" href="/style/book/libs.min.css" type="text/css">
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.css" crossorigin="anonymous" type="text/css">
