--- a/src/views/book/partials/main.ejs
+++ b/src/views/book/partials/main.ejs
@@ -6,7 +6,7 @@
                     <a href="/book/{id}"><img src="img/books/{id}.jpg" alt="{title}">
                         <div data-title="{title}" class="blockI">
                             <div data-book-title="{title}" class="title size_text">{title}</div>
-                            <div data-book-author="{author}" class="author">{author}</div>
+                            <div data-book-author="{author}" class="author"><%= author%></div>
                         </div>
                     </a>
                     <a href="/book/{id}">
@@ -15,30 +15,30 @@
                 </div>
             </div>
         </script>
-        <div id="id" book-id="22">
+        <div id="id" book-id=<%= bookId%> >
             <div id="bookImg" class="col-xs-12 col-sm-3 col-md-3 item" style="margin: auto;">
-                <img src="./book-page_files/22.jpg" alt="Responsive image" class="img-responsive">
+                <img src=<%= imagePath%> alt="Responsive image" class="img-responsive">
                 <hr>
             </div>
             <div class="col-xs-12 col-sm-9 col-md-9 col-lg-9 info">
                 <div class="bookInfo col-md-12">
-                    <div id="title" class="titleBook">СИ++ И КОМПЬЮТЕРНАЯ ГРАФИКА</div>
+                    <div id="title" class="titleBook"><%= bookName%></div>
                 </div>
                 <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12">
                     <div class="bookLastInfo">
-                        <div class="bookRow"><span class="properties">автор:</span><span id="author">Андрей Богуславский</span></div>
-                        <div class="bookRow"><span class="properties">год:</span><span id="year">2003</span></div>
-                        <div class="bookRow"><span class="properties">страниц:</span><span id="pages">351</span></div>
-                        <div class="bookRow"><span class="properties">isbn:</span><span id="isbn"></span></div>
+                        <div class="bookRow"><span class="properties">автор:</span><span id="author"><%= author%></span></div>
+                        <div class="bookRow"><span class="properties">год:</span><span id="year"><%= year%></span></div>
+                        <div class="bookRow"><span class="properties">страниц:</span><span id="pages">???</span></div>
+                        <div class="bookRow"><span class="properties">isbn:</span><span id="isbn">???</span></div>
                     </div>
                 </div>
                 <div class="btnBlock col-xs-12 col-sm-12 col-md-12">
-                    <button type="button" class="btnBookID btn-lg btn btn-success">Хочу читать!</button>
+                    <button type="button" class="btnBookID btn-lg btn btn-success", onclick="wantThisBook()">Хочу читать!</button>
                 </div>
                 <div class="bookDescription col-xs-12 col-sm-12 col-md-12 hidden-xs hidden-sm">
                     <h4>О книге</h4>
                     <hr>
-                    <p id="description">Лекции и практикум по программированию на Си++</p>
+                    <p id="description"><%= desciption%></p>
                 </div>
             </div>
             <div class="bookDescription col-xs-12 col-sm-12 col-md-12 hidden-md hidden-lg">
@@ -47,6 +47,19 @@
                 <p class="description">Лекции и практикум по программированию на Си++</p>
             </div>
         </div>
-        <script src="./book-page_files/book.js" defer=""></script>
+        <script>
+            const url = `http://localhost:3005/books/<%= bookId%>`;
+            async function wantThisBook() {
+                fetch(url, {
+                    method: "POST",
+                })
+                .then(function() {
+                    alert("Contacts: ....");
+                })
+                .catch(function(error) {
+                    console.log(error);
+                });
+            };
+        </script>
     </div>
 </div>
