--- a/src/views/book/partials/main.ejs
+++ b/src/views/book/partials/main.ejs
@@ -17,7 +17,7 @@
         </script>
         <div id="id" book-id=<%= bookId%> >
             <div id="bookImg" class="col-xs-12 col-sm-3 col-md-3 item" style="margin: auto;">
-                <img src=<%= imagePath%> alt="Responsive image" class="img-responsive">
+                <img src=/images/<%= imagePath%> alt="Responsive image" class="img-responsive">
                 <hr>
             </div>
             <div class="col-xs-12 col-sm-9 col-md-9 col-lg-9 info">
