--- a/src/views/v1/books/index.ejs
+++ b/src/views/v1/books/index.ejs
@@ -10,7 +10,7 @@
         <%- include("./partials/header"); %>
     </section>
     <section id="main" class="main-wrapper">
-        <%- include("./partials/main", {books, searchQuery}); %>
+        <%- include("./partials/main", {books, searchQuery, pagesStatus}); %>
     </section>
     <section id="footer" class="footer-wrapper">
         <%- include("./partials/footer"); %>
