--- a/src/views/v1/books/partials/main.ejs
+++ b/src/views/v1/books/partials/main.ejs
@@ -1,24 +1,34 @@
 <div class="container">
+    <% let isSearchPage = false; %>
     <% if (typeof searchQuery === "string") {%>
+        <% isSearchPage = true; %>
         <div style="text-align: center;">
-            Результат поиска: <%= searchQuery%></b> , найдено: <%= books.length%> 
-        </div> 
+            Результат поиска: "<%= searchQuery%>"</b> , найдено всего: <%= pagesStatus.totalyFound%> 
+        </div>
     <% } %> 
     <div id="content" class="col-xs-12 col-sm-12 col-md-12 col-lg-12">
         <% for (let i = 0; i < books.length; i++) { %>
             <div data-book-id="<%= books[i].id %>" class="book_item col-xs-6 col-sm-3 col-md-2 col-lg-2">
                 <div class="book">
-                    <a href="http://localhost:3005/books/<%= books[i].id %>"><img src="/images/<%= books[i].image_path %>" alt="<%= books[i].book_name %>">
+                    <a href="http://localhost:3005/api/v1/books/<%= books[i].id %>"><img src="/images/<%= books[i].image_path %>" alt="<%= books[i].book_name %>">
                         <div data-title="<%= books[i].book_name %>" class="blockI" style="height: 46px;">
                             <div data-book-title="<%= books[i].book_name %>" class="title size_text"><%= books[i].book_name %></div>
                             <div data-book-author="<%= books[i].author %>" class="author"><%= books[i].author %></div>
                         </div>
                     </a>
-                    <a href="http://localhost:3005/books/<%= books[i].id %>">
+                    <a href="http://localhost:3005/api/v1/books/<%= books[i].id %>">
                         <button type="button" class="details btn btn-success">Читать</button>
                     </a>
                 </div>
             </div>
         <% } %>
-   </div>
+    </div>
+    <div class="pagination">
+        <% if (pagesStatus.hasPrevPage) { %>
+            <a href="http://localhost:3005/api/v1/?offset=<%= pagesStatus.offsetBack %><%= isSearchPage ? `&search=${searchQuery}` : `` %>">Назад</a>
+        <% } %>
+        <% if (pagesStatus.hasNextPage) { %>
+            <a href="http://localhost:3005/api/v1/?offset=<%= pagesStatus.offsetAhead %><%= isSearchPage ? `&search=${searchQuery}` : `` %>">Вперед</a>
+        <% } %>
+    </div>
 </div>
