--- a/public/style/books/style.css
+++ b/public/style/books/style.css
@@ -1,7 +1,29 @@
 * {
     margin: 0;
-    padding: 0; }
+    padding: 0;
+  }
   
+  .pagination {
+    display: inline-block;
+  }
+
+  .pagination a {
+    color: black;
+    float: left;
+    padding: 8px 16px;
+    text-decoration: none;
+    transition: background-color .3s;
+    border: 1px solid #ddd;
+  }
+
+  .pagination a.active {
+    background-color: #4CAF50;
+    color: white;
+    border: 1px solid #4CAF50;
+  }
+
+  .pagination a:hover:not(.active) {background-color: #ddd;}
+
   html, body {
     font-family: 'PT Sans', Arial, sans-serif;
     line-height: 1.5;
