--- a/src/views/v1/book/partials/header.ejs
+++ b/src/views/v1/book/partials/header.ejs
@@ -1,7 +1,7 @@
 <nav class="navbar navbar-default">
     <div class="container">
         <div class="col-xs-5 col-sm-2 col-md-2 col-lg-2">
-            <div class="logo"><a href="http://localhost:3005/" class="navbar-brand"><span class="sh">Ш</span><span class="plus">++</span></a></div>
+            <div class="logo"><a href="http://localhost:3005/api/v1/" class="navbar-brand"><span class="sh">Ш</span><span class="plus">++</span></a></div>
         </div>
         <div class="col-xs-12 col-sm-7 col-md-8 col-lg-8">
             <div class="main-menu">
