refactoring of view and controller of single book page

--- a/src/views/v1/book/partials/main.ejs
+++ b/src/views/v1/book/partials/main.ejs
@@ -6,7 +6,7 @@
                     <a href="/book/{id}"><img src="img/books/{id}.jpg" alt="{title}">
                         <div data-title="{title}" class="blockI">
                             <div data-book-title="{title}" class="title size_text">{title}</div>
-                            <div data-book-author="{author}" class="author"><%= author%></div>
+                            <div data-book-author="{author}" class="author"><%= book.author%></div>
                         </div>
                     </a>
                     <a href="/book/{id}">
@@ -15,21 +15,21 @@
                 </div>
             </div>
         </script>
-        <div id="id" book-id=<%= bookId%> >
+        <div id="id" book-id=<%= book.id%> >
             <div id="bookImg" class="col-xs-12 col-sm-3 col-md-3 item" style="margin: auto;">
-                <img src=/images/<%= imagePath%> alt="Responsive image" class="img-responsive">
+                <img src=/images/<%= book.image_path%> alt="Responsive image" class="img-responsive">
                 <hr>
             </div>
             <div class="col-xs-12 col-sm-9 col-md-9 col-lg-9 info">
                 <div class="bookInfo col-md-12">
-                    <div id="title" class="titleBook"><%= bookName%></div>
+                    <div id="title" class="titleBook"><%= book.book_name%></div>
                 </div>
                 <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12">
                     <div class="bookLastInfo">
-                        <div class="bookRow"><span class="properties">автор:</span><span id="author"><%= author%></span></div>
-                        <div class="bookRow"><span class="properties">год:</span><span id="year"><%= year%></span></div>
-                        <div class="bookRow"><span class="properties">страниц:</span><span id="pages">???</span></div>
-                        <div class="bookRow"><span class="properties">isbn:</span><span id="isbn">???</span></div>
+                        <div class="bookRow"><span class="properties">автор:</span><span id="author"> <%= book.author%></span></div>
+                        <div class="bookRow"><span class="properties">год:</span><span id="year"> <%= book.publish_year%></span></div>
+                        <div class="bookRow"><span class="properties">страниц:</span><span id="pages"> <%= book.pages%></span></div>
+                        <div class="bookRow"><span class="properties">isbn:</span><span id="isbn"> <%= book.isbn%></span></div>
                     </div>
                 </div>
                 <div class="btnBlock col-xs-12 col-sm-12 col-md-12">
@@ -38,7 +38,7 @@
                 <div class="bookDescription col-xs-12 col-sm-12 col-md-12 hidden-xs hidden-sm">
                     <h4>О книге</h4>
                     <hr>
-                    <p id="description"><%= desciption%></p>
+                    <p id="description"><%= book.book_desciption%></p>
                 </div>
             </div>
             <div class="bookDescription col-xs-12 col-sm-12 col-md-12 hidden-md hidden-lg">
@@ -48,7 +48,7 @@
             </div>
         </div>
         <script>
-            const url = `http://localhost:3005/api/v1/books/<%= bookId%>`;
+            const url = `http://localhost:3005/api/v1/books/<%= book.id%>`;
             async function wantThisBook() {
                 fetch(url, {
                     method: "POST",
