--- a/src/views/v1/book/index.ejs
+++ b/src/views/v1/book/index.ejs
@@ -8,7 +8,7 @@
         <%- include("./partials/header"); %>
     </header>
     <main>
-        <%- include("./partials/main"); %>
+        <%- include("./partials/main", {book: book}); %>
     </main>
     <footer>
         <%- include("./partials/footer"); %>
