--- a/src/views/v1/admin/partials/main.ejs
+++ b/src/views/v1/admin/partials/main.ejs
@@ -43,7 +43,7 @@
     </div>
         
     <div>
-        <form id="add-book" method="post" enctype='multipart/form-data' action='http://localhost:3005/api/v1/admin/add'>
+        <form id="add-book" method="post" enctype='multipart/form-data' action='http://localhost:3005/api/v1/admin/add/login'>
             <div class="mb-3">
               <label for="bookName" class="form-label">Название книги</label>
               <input type="bookName" id="name" class="form-control" name="bookName">
