--- a/src/views/v1/books/partials/header.ejs
+++ b/src/views/v1/books/partials/header.ejs
@@ -30,7 +30,7 @@
         </div>
         <div class="col-xs-2 col-sm-3 col-md-2 col-lg-2 hidden-xs">
             <div>
-                <a id="login-button" ms-hide-element="true" href="" class="button login w-button">Login</a>
+                <a id="login-button" ms-hide-element="true" href="http://localhost:3005/api/v1/auth" class="button login w-button">Login</a>
             </div>
             <div class="social">
                 <a href="https://www.facebook.com/shpp.kr/" target="_blank">
