altered v1 table: 1 author column -> 3 authors column

--- a/src/views/v1/admin/partials/main.ejs
+++ b/src/views/v1/admin/partials/main.ejs
@@ -43,7 +43,7 @@
     </div>
         
     <div>
-        <form id="add-book" method="post" enctype='multipart/form-data' action='http://localhost:3005/api/v1/admin/add/login'>
+        <form id="add-book" method="post" enctype='multipart/form-data' action='http://localhost:3005/api/v1/admin/add/'>
             <div class="mb-3">
               <label for="bookName" class="form-label">Название книги</label>
               <input type="bookName" id="name" class="form-control" name="bookName">
@@ -54,7 +54,15 @@
             </div>
             <div class="mb-3">
                 <label for="author" class="form-label">Автор</label>
-                <input type="author" id="author" class="form-control" name="author">
+                <input type="author" id="author_1" class="form-control" name="author_1">
+            </div>
+            <div class="mb-3">
+                <label for="author" class="form-label">Автор</label>
+                <input type="author" id="author_2" class="form-control" name="author_2">
+            </div>
+            <div class="mb-3">
+                <label for="author" class="form-label">Автор</label>
+                <input type="author" id="author_3" class="form-control" name="author_3">
             </div>
             <div class="mb-3">
                 <label for="description" class="form-label">Описание</label>
