--- a/src/views/v1/book/partials/main.ejs
+++ b/src/views/v1/book/partials/main.ejs
@@ -26,7 +26,9 @@
                 </div>
                 <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12">
                     <div class="bookLastInfo">
-                        <div class="bookRow"><span class="properties">автор:</span><span id="author"> <%= book.author%></span></div>
+                        <div class="bookRow"><span class="properties">автор:</span><span id="author_1"> <%= book.author_1%></span></div>
+                        <div class="bookRow"><span class="properties">автор:</span><span id="author_2"> <%= book.author_2%></span></div>
+                        <div class="bookRow"><span class="properties">автор:</span><span id="author_3"> <%= book.author_3%></span></div>
                         <div class="bookRow"><span class="properties">год:</span><span id="year"> <%= book.publish_year%></span></div>
                         <div class="bookRow"><span class="properties">страниц:</span><span id="pages"> <%= book.pages%></span></div>
                         <div class="bookRow"><span class="properties">isbn:</span><span id="isbn"> <%= book.isbn%></span></div>
