--- a/src/views/v1/books/partials/main.ejs
+++ b/src/views/v1/books/partials/main.ejs
@@ -13,7 +13,9 @@
                     <a href="http://localhost:3005/api/v1/books/<%= books[i].id %>"><img src="/images/<%= books[i].image_path %>" alt="<%= books[i].book_name %>">
                         <div data-title="<%= books[i].book_name %>" class="blockI" style="height: 46px;">
                             <div data-book-title="<%= books[i].book_name %>" class="title size_text"><%= books[i].book_name %></div>
-                            <div data-book-author="<%= books[i].author %>" class="author"><%= books[i].author %></div>
+                            <div data-book-author="<%= books[i].author_1 %>" class="author"><%= books[i].author_1 %></div>
+                            <div data-book-author="<%= books[i].author_2 %>" class="author"><%= books[i].author_2 %></div>
+                            <div data-book-author="<%= books[i].author_3 %>" class="author"><%= books[i].author_3 %></div>
                         </div>
                     </a>
                     <a href="http://localhost:3005/api/v1/books/<%= books[i].id %>">
