--- a/src/views/v2/auth/index.ejs
+++ b/src/views/v2/auth/index.ejs
@@ -8,7 +8,7 @@
     <title>Library logining</title>
 </head>
 <body>
-    <form id="login" method="post" action="http://localhost:3005/api/v1/auth/login">
+    <form id="login" method="post" action="http://localhost:3005/auth/login">
         <div class="mb-3">
           <label for="login" class="form-label">Login</label>
           <input type="login" class="form-control" name="login">
