--- a/src/views/v2/books/partials/main.ejs
+++ b/src/views/v2/books/partials/main.ejs
@@ -10,7 +10,7 @@
         <% for (let i = 0; i < books.length; i++) { %>
             <div data-book-id="<%= books[i].id %>" class="book_item col-xs-6 col-sm-3 col-md-2 col-lg-2">
                 <div class="book">
-                    <a href="http://localhost:3005/api/v1/books/<%= books[i].id %>"><img src="/images/<%= books[i].image_path %>" alt="<%= books[i].book_name %>">
+                    <a href="http://localhost:3005/books/<%= books[i].id %>"><img src="/images/<%= books[i].image_path %>" alt="<%= books[i].book_name %>">
                         <div data-title="<%= books[i].book_name %>" class="blockI" style="height: 46px;">
                             <div data-book-title="<%= books[i].book_name %>" class="title size_text"><%= books[i].book_name %></div>
                             <div data-book-author="<%= books[i].author_1 %>" class="author"><%= books[i].author_1 %></div>
@@ -18,7 +18,7 @@
                             <div data-book-author="<%= books[i].author_3 %>" class="author"><%= books[i].author_3 %></div>
                         </div>
                     </a>
-                    <a href="http://localhost:3005/api/v1/books/<%= books[i].id %>">
+                    <a href="http://localhost:3005/books/<%= books[i].id %>">
                         <button type="button" class="details btn btn-success">Читать</button>
                     </a>
                 </div>
@@ -27,10 +27,10 @@
     </div>
     <div class="pagination">
         <% if (pagesStatus.hasPrevPage) { %>
-            <a href="http://localhost:3005/api/v1/?offset=<%= pagesStatus.offsetBack %><%= isSearchPage ? `&search=${searchQuery}` : `` %>">Назад</a>
+            <a href="http://localhost:3005/?offset=<%= pagesStatus.offsetBack %><%= isSearchPage ? `&search=${searchQuery}` : `` %>">Назад</a>
         <% } %>
         <% if (pagesStatus.hasNextPage) { %>
-            <a href="http://localhost:3005/api/v1/?offset=<%= pagesStatus.offsetAhead %><%= isSearchPage ? `&search=${searchQuery}` : `` %>">Вперед</a>
+            <a href="http://localhost:3005/?offset=<%= pagesStatus.offsetAhead %><%= isSearchPage ? `&search=${searchQuery}` : `` %>">Вперед</a>
         <% } %>
     </div>
 </div>
