refactored auth controllers

--- a/src/views/v2/book/partials/main.ejs
+++ b/src/views/v2/book/partials/main.ejs
@@ -6,7 +6,7 @@
                     <a href="/book/{id}"><img src="img/books/{id}.jpg" alt="{title}">
                         <div data-title="{title}" class="blockI">
                             <div data-book-title="{title}" class="title size_text">{title}</div>
-                            <div data-book-author="{author}" class="author"><%= book.author%></div>
+                            <div data-book-author="{author}" class="author"><%= book.authors%></div>
                         </div>
                     </a>
                     <a href="/book/{id}">
