--- a/src/views/v2/admin/index.ejs
+++ b/src/views/v2/admin/index.ejs
@@ -13,13 +13,13 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3" crossorigin="anonymous"></script>
     <script>
         async function logout() {
-            const response = await fetch("http://localhost:3005/api/v1/auth/logout", {method: "POST"});
-            if (response.ok) window.location.href = "http://localhost:3005/api/v1/";
+            const response = await fetch("http://localhost:3005/auth/logout", {method: "POST"});
+            if (response.ok) window.location.href = "http://localhost:3005/";
         }
         async function deleteBook(id) {
             const bookID = Number.parseInt(id);
-            const response = await fetch(`http://localhost:3005/api/v1/admin/delete/${bookID}`, {method: "DELETE"});
-            if (response.ok) window.location.href = `http://localhost:3005/api/v1/admin/`;
+            const response = await fetch(`http://localhost:3005/admin/delete/${bookID}`, {method: "DELETE"});
+            if (response.ok) window.location.href = `http://localhost:3005/admin/`;
         }
     </script>
 </body>
