implemented cron backup db dumps and hard deletion

--- a/src/views/v2/admin/partials/main.ejs
+++ b/src/views/v2/admin/partials/main.ejs
@@ -20,7 +20,7 @@
                         <td><%= books[i].authors %></td>
                         <td><%= books[i].publish_year %></td>
                         <td>
-                            <button id="<%= books[i].id %>" onclick="deleteBook(String(this.id))">Удалить</button>
+                            <button id="<%= books[i].id %>" onclick="deleteBook(String(this.id))"">Удалить</button>
                         </td>
                         <td><%= books[i].visits %></td>
                         <td><%= books[i].wants %></td>
